# caliop-readers

./: .gitignore  README.md  pyproject.toml
notebooks/: example.ipynb
scripts/: create_miniconda_env.bash
src/caliopreaders/: __init__.py  reporting.py
src/caliopreaders/config/: __init__.py  caliop.yaml
src/caliopreaders/config/files/: data.yaml
src/caliopreaders/core/: base.py  lvl0.py  lvl1B.py
src/caliopreaders/data/: __init__.py  data.py
src/caliopreaders/utilities/: general.py
